Fix footer view on mobile devices

--- a/assets/css/public/lbcc.css
+++ b/assets/css/public/lbcc.css
@@ -195,7 +195,7 @@ img.main_logo {
     background-image: url('../../images/public/dark_blue_tree.png');
     background-repeat: no-repeat;
     background-position: right;
-    height: 300px;
+    min-height: 300px;
 }
 
 .center {
